--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Let's study languages!</div>
+                <div class="intro-lead-in">Let's learn languages!</div>
                 <div class="intro-heading">Talk Talk Talk</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More<br>くわしくみる</a>
             </div>
