--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,9 +13,9 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
+                    <h4 class="service-heading">Langugages</h4>
                     <p class="text-muted">Q. Do I have to be able to speak English perfectly? And do I have to speak English?<br> 英語は完璧じゃなきゃダメですか？英語で話さないとダメですか？
                       <br> <br> A. No. Even the owner can't speak English very well. We can inprove own English skills together. If you can't speak English well, we'll welcome you kindly.
                       <br>And we are here to try to learn many languages. Of course you can speak yours or your studying one! And you can learn ours too.
@@ -25,9 +25,9 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-globe-americas fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
+                    <h4 class="service-heading">Country</h4>
                     <p class="text-muted">Q. How many members in your server? And where are you from? <br> 何人くらいメンバーがいますか？どこ出身の人たちですか？
                     <br><br> A. About 30 members now. We are from Japan, Turkey, Bangladesh, France, Brazil etc.
                    <br> 今は30人程度です。日本人はもちろん、トルコ、バングラデシュ、フランス、ブラジル人のメンバーがいます。</p>
@@ -35,7 +35,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                        <i class="far fa-eye fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Security</h4>
                     <p class="text-muted">Q. I'm afraid of if there are bad people. <br>怖い人がいないか不安なのですが。。
