--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,9 +11,10 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/team/{{ member.pic }}" class="img-responsive img-circle" alt="">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
+                        <p class="text-muted">{{ member.language }}</p>
                         <ul class="list-inline social-buttons">
                             {% for network in member.social %}
                             <li>
